*Empty MediaWiki Message*

--- a/Лугаян_ош.mw
+++ b/Лугаян_ош.mw
@@ -60,7 +60,7 @@
 }}
 '''Лугаян ошось (косо-косо мерить: Лукоянов ош)''' ({{lang-ru|Лукоянов}}) — те [[Россия Мастор|Россия Масторонть ош]], ашти [[Алоошонь ёнкс|Алоошонь ёнксонть]] лембе ёнсо. Лугаян буенть куншка ош.
 
-Лугаян ошсонть ашти Эрзянь культурань музеесь.
+Лугаян ошсонть ашти Эрзянь шкинемань музеесь<ref name="Официальный сайт">[http://kultura-lukoyanov.ru/otdel-kultury/centr-erzyanskoj-kultury/muzej-2/dela-i-zaboty-muzeya-erzyanskoj-kultury/  Официальный сайт отдела культуры и спорта администрации Лукояновского муниципального района Дела и заботы Музея Эрзянской культуры]{{Ref-ru}}</ref>, кона ульнесь панжозь [[1991 ие]]нь [[сундерьковонь 20 чи]]стэ.
 
 <gallery caption="" widths="150" heights="150" perrow="4">
 Артовкс:Lukoyanov. Bridge across Khvoshchovka River.jpg|Тестэ ушодовиль ошось
@@ -72,5 +72,8 @@
 Артовкс:Lukoyanov. Monument to Lenin in front of Town Primary School.jpg|[[Ленин, Владимир Ильич|Лениннэ]] кеврунгось школа вакссо
 Артовкс:Lukoyanov. New cottages in Southwest Microraion.jpg|Од кудынетьне Лембе-чивалгомань микробуесэ
 </gallery>
+
+== Лисьм.: ==
+<references />
 
 [[Категория:Россия Масторонть ошт]]
