*Empty MediaWiki Message*

--- a/Рябовонь,_Анатолий_Павлович.mw
+++ b/Рябовонь,_Анатолий_Павлович.mw
@@ -26,7 +26,7 @@
 '''Анатолий Павлович Рябовонь''' ([[1894]] [[чадыковонь 16 чи]]стэ [[Ламбаське (Ицял буень)|Ламбаське велесэ]], [[Ицялонь буе|Ицялонь буесэ]], [[Мордовия Республикась|Мордовия Республикань]] —  [[1938]] [[панжиковонь 22 чи]]стэ [[Саранск]]ойсэ) — эрзянь [[профессор]], ламо келень содыця, васенце '''Эрзянь букварень пурныця-нолдыця'''. [[1923]] иестэ сти  Московсо [[«Сыргозема» вейсэндявкс]]онть прявтокс, ледезь 1938-це иень [[Панжиков|панжиковонь]] [[23 (комськолмово)|23-це]] чистэ.
 
 == Эрямо пингезэ (Биографиязо) ==
-Рябовонь Анатолий чачсь эрзянь сокиця-видиця семияс, [[Ламбаське (Ицял буень)|Ламбаське велесэ]]. Велень школанть прядовомадо мейле тетянзо-аванзо кучизь сонзэ тонавтнеме [[Починковонь духовной училищав]], мейле тонавтни [[Нижегородской оймень (духовной) семинариясо]].
+Рябовонь Анатолий чачсь эрзянь сокиця-видиця семияс, [[Ламбаське (Ицял буень)|Ламбаське велесэ]]<ref name="philol">[http://www.philol.msu.ru/~smu/work/science-day/2011/30.pdf Данильчев Александр Алексеевич «Эрзянско-русский словарик» и «Русско-эрзянский словарь» А. П. Рябова.]{{ref-ru}}, {{ref-myv}}</ref>. Велень школанть прядовомадо мейле тетянзо-аванзо кучизь сонзэ тонавтнеме [[Починковонь духовной училищав]], мейле тонавтни [[Нижегородской оймень (духовной) семинариясо]].
 
 == Тонавтнемазо ==
 Тетянзо куломадо мейле кадсы семинариясо тонавтнеманть, ансяк, сёксня 1912-це иестэ пек парсте максы экзамент Нежинской педагогической институтонь келень тонавтнема(филологической) факультетс, конань пек парсте прядсы [[1916 ие|1916]]-це иестэ. Тонавтнемстэ сон кармась содамост [[Латинэнь кель|латинэнь]], [[Англань кель|англань]], [[Суоминь кель|финнэнь]] ды [[Эстэнь кель|эстониянь]] кельтнень.
@@ -57,7 +57,7 @@
 Ламо валт пырнынь Куцян велестэ (Ордань-буень район Мокшэрзянь область). Валтнэнень максозь литературань келень хорма. <br />
 Ламо шка ютавтсь, ламо вий рутсь мартон валкскенть сёрмадомсто Демань Поля (П. Ф. Дементьева).<br /><br />
 
-''Январь ков  1930-це ие. <br /> Анатолий Рябов<ref> Эрзянь-рузонь валкске Москов, Центриздат, 1930 А. П. Рябов</ref>. <br />''{{Цитатань пе}}
+''Январь ков  1930-це ие. <br /> Анатолий Рябов<ref> Эрзянь-рузонь валкске. Москов, Центриздат, 1930 А. П. Рябов</ref>. <br />''{{Цитатань пе}}
  
 [[1934 ие|1934]]-це иестэ эрзянь келень васенце профессоронть А. П. Рябовонь тердизь Мордовской пединститутс мокшонь-эрзянь келень кафедранть прявтокс. А. П. Рябов профессоронть покш питнезэ сеньсэ, што сон васенцеде сёрмадызе ды ловнызе неень шкань [[Эрзянь кель|эрзянь келень]] курсонть, методиканть ды сонзэ историянзо.
 
@@ -72,10 +72,10 @@
 
 А. П. Рябов профессоронть ульнесь нурькине эрямозо, ялатеке сон виензэ максызе эрзянь ломантнень туртов. Сон сёрмадсь малав 30 ловномат эрзянь ды мокшонь кельтнень коряс, конатне кандыть те шкас покш лезэ. Минь сюконятано те покш Эрзянь ломанентень, кирдтяно сонзэ мельсэнек — превсэнек.
 
-== Сёрм. ==
+== Лисьм. ==
 <references />
-* Анатолий Павлович Рябов: Бибилиографический указатель, Саранск, 1994 ие
-<!--
+<!--* Анатолий Павлович Рябов: Бибилиографический указатель, Саранск, 1994 ие
+
 Н. Баюшкина,
 наукань кандидат
 -->
