*Empty MediaWiki Message*

--- a/Миронов,_Тихон_Петрович.mw
+++ b/Миронов,_Тихон_Петрович.mw
@@ -37,8 +37,8 @@
 * Миронов, Т.П. Теньгушевский (шокша) диалект как результат скрещения Текст. / Т.П. Миронов. Саранск: Мордгиз, 1936. - 112 с.
 
 == Сёрм.: ==
-*  Викторов В. Трагедия семьи Мироновых // Мордовия. 1991. 6 нояб.; Мордовия (1). С. 126-127; 
-*  Куликов, 1997. С. 304.
+*  Викторов В. Трагедия семьи Мироновых // Мордовия. 1991. 6 нояб.; Мордовия (1). С. 126-127; Куликов, 1997. С. 304
+
 == Лисьм.: ==
 <references />
 
