*Empty MediaWiki Message*

--- a/Пою_Веле_(Кадонь_буе).mw
+++ b/Пою_Веле_(Кадонь_буе).mw
@@ -63,13 +63,11 @@
 '''Пою''' ({{lang-ru|с. Паево}})  — мокшонь<ref name="Многоликая">[http://mnogolik-mordovia.mrsu.ru/k_Paevo.htm Многоликая Мордовия: Село Паево] {{Ref-ru}}</ref> веле [[Мордовия]]со [[Кадоньбуе]]сэ.
 
 == Веленть лемденть  ==
-
-
 == Содавикс ломанть те велестэнть ==
+* [[Лобанов Виктор Михайлович|Лобанов Виктор Михайлович]]<ref name="БМЛ_Лобанов">[http://www.lib.e-mordovia.ru/Library/?Char=%CB&id=3 Библиотека Мордовской литературы.: Лобанов Виктор Михайлович] {{ref-ru}}</ref> — мокшонь сёрмадей
 
 
-
-== Сёрм.: ==
+== Лисьм.: ==
 <references />
 
 
