--- a/Лукьянов,_Алексей_Миронович.mw
+++ b/Лукьянов,_Алексей_Миронович.mw
@@ -24,9 +24,9 @@
 }}
 '''Лукьяновонь Алексей''' ( [[1910]] иень [[эйзюрковонь 15 чи]]стэ [[Самарань ёнкс]] [[Похвистневань буе Самарань ёнксcо|Похвистневань буе]]нь [[Якстере Лисьмапрят (Похвистнева буень)|Якстере Лисьмапрят велесэ]] - [[1991]] [[даволковонь 24 чи]]стэ, [[Москов]]) — [[Эрзянь кель|эрзянь]]<ref name="Время и события, 2010">Время и события. 2010 Библиографический указатель. Указ Главы Республики Мордовия{{ref-ru}}</ref> кельсэ сёрмадей, валморонь ладсий, прозаик, куляньсёрмадей.
 == Эрямо пингезэ ==
-Эрзянь поэтэсь, прозаикесь, журналистэсь Алексей Миронович Лукьянов чачсь [[1910 ие]]нь [[эйзюрковонь 15 чи]]стэ [[Самарань ёнкс|Самарань ёнкс]] [[Похвистневань буе Самарань ёнксcо|Похвистневань буе]]нь [[Якстере Лисьмапрят (Похвистнева буень)|Якстере Лисьмапрят]] (Красные Ключи<ref name="Сятко 2010/3">«Сятко». – 2010. – 3-це №. Алексей Миронович Лукьянов. Иень тешкст // Чачома чистэнзэ 100 иетненень –  66–71 лоп.{{ref-myv}}</ref>) велесэ. Ушодкс школанть прядомадо мейле тонавтнесь  Вишка Толканонь сисем иень школасо. Ушодкс школанть прядомадо мейле тонавтнесь Вишка Толканонь сисем иень школасо. Тонавтнемстэ ушодсь валморонь сёрмадомо. 1926-це иестэ «Якстере теште» кулялопасо лиссь «Нурька морыне» васенце валморозо. Школань прядомодо мейле Алексей Лукьяновонь, кода касыця валморонь ладсиенть, саизь важодеме «Якстере теште» кулялопанть литважодицякс. Чокшне ланга сон тонавтнесь Московонь прявтуниверситетсэнть литературной факультетсэ.
+Эрзянь поэтэсь, прозаикесь, журналистэсь Алексей Миронович Лукьянов чачсь [[1910 ие]]нь [[эйзюрковонь 15 чи]]стэ<ref name="Библиотека_Лукьянов"/> [[Самарань ёнкс|Самарань ёнкс]] [[Похвистневань буе Самарань ёнксcо|Похвистневань буе]]нь [[Якстере Лисьмапрят (Похвистнева буень)|Якстере Лисьмапрят]] (Красные Ключи<ref name="Сятко 2010/3">«Сятко». – 2010. – 3-це №. Алексей Миронович Лукьянов. Иень тешкст // Чачома чистэнзэ 100 иетненень –  66–71 лоп.{{ref-myv}}</ref>) велесэ. Ушодкс школанть прядомадо мейле тонавтнесь  Вишка Толканонь сисем иень школасо. Ушодкс школанть прядомадо мейле тонавтнесь Вишка Толканонь сисем иень школасо. Тонавтнемстэ ушодсь валморонь сёрмадомо. 1926-це иестэ «Якстере теште» кулялопасо лиссь «Нурька морыне» васенце валморозо. Школань прядомодо мейле Алексей Лукьяновонь, кода касыця валморонь ладсиенть, саизь важодеме «Якстере теште» кулялопанть литважодицякс. Чокшне ланга сон тонавтнесь Московонь прявтуниверситетсэнть литературной факультетсэ.
 
-1932-1935-це иетнестэ А.Лукьянов эрясь [[Саран ош|Саранскойсэ]]. Важодсь «Эрзянь коммуна» кулялопасонть, иеде седе аламо ульнесь [[Сятко (журнал-ковставкс)|«Сятко»]] ковставксонть-журналонть прявтсо: 09.[[1932]] ― 08.[[1933]]. Истя жо ульнесь Мордовиянь Сёрмадеень кужонть правлениясо. Те шкастонть сёрмадсь ламо валмороть, поэмат, ёвтнемат, повессть ды валморосо романт, сеедьстэ вастневсь ловныцятнень марто. 
+1932-1935-це иетнестэ А.Лукьянов эрясь [[Саран ош|Саранскойсэ]]. Важодсь «Эрзянь коммуна» кулялопасонть<ref name="Библиотека_Лукьянов">[http://www.lib.e-mordovia.ru/Library/?Char=%CB&id=4 Библиотека Мордовской литературы. Лукьянов Алексей Миронович] {{ref-ru}}</ref>, иеде седе аламо ульнесь [[Сятко (журнал-ковставкс)|«Сятко»]] ковставксонть-журналонть прявтсо: 09.[[1932]] ― 08.[[1933]]. Истя жо ульнесь Мордовиянь Сёрмадеень кужонть правлениясо. Те шкастонть сёрмадсь ламо валмороть, поэмат, ёвтнемат, повессть ды валморосо романт, сеедьстэ вастневсь ловныцятнень марто. 
 
 1935-це иестэ А.М.Лукьянов велявтсь Московов, ульнесь Учпедгизэнь редакторокс. Зярдо ушодовсь Ине Отечественной туремась, тусь фронтов, пачколесь натой Порт-Артуров. Алексей Миронович казезь колмо орденсэ ды ламо медельсэ. <br />
 
