*Empty MediaWiki Message*

--- a/Любаев,_Павел_Кириллович.mw
+++ b/Любаев,_Павел_Кириллович.mw
@@ -25,7 +25,7 @@
 '''Любаевень Павел Кириллович''' ( [[1919 ие]] [[ацамковонь 24 чи]]стэ [[Алоошонь ёнкс]]онь Покш Болдина буень [[Пикшень]] велесэ - [[2013 ие]] [[умарьковонь 29 чи]]сте  [[Саранск]] ) — [[Эрзя|эрзянь]] сёрмадей, лия кельстэ ютавтниця валморозей.
 
 ==Эстедензэ==
-Павел Кириллович Любаев чачсь [[1919 ие]]нь [[ацамковонь 24 чи]]стэ [[Алоошонь ёнкс]]онь Покш Болдина райононь Пикшень велесэ. Чачсь сокицянь-видицянь семиясо. Прядынзе Мордовиянь рабфаконть (1938), Мордовской государственной университетэнть (1961). 1946 иестэ саезь важодсь «Эрзянь коммуна» ды «Ленинэнь киява» газетатнень редакциясо. Мейле 15 иеть — МАССР-нь МВД-сэ. 
+Павел Кириллович Любаев чачсь [[1919 ие]]нь [[ацамковонь 24 чи]]стэ [[Алоошонь ёнкс]]онь Покш Болдина райононь Пикшень велесэ<ref name="Библиотека_Любаев">[http://www.lib.e-mordovia.ru/Library/?Char=%CB&id=5 Библиотека Мордовской литературы. Любаев Павел Кириллович] {{ref-ru}}</ref>. Чачсь сокицянь-видицянь семиясо. Прядынзе Мордовиянь рабфаконть (1938), Мордовской государственной университетэнть (1961). 1946 иестэ саезь важодсь «Эрзянь коммуна» ды «Ленинэнь киява» газетатнень редакциясо. Мейле 15 иеть — МАССР-нь МВД-сэ. 
 
 == Сёрмадовксонзо ==
 Литературань кинзэ ушодызе лия кельстэ ютавтниця поэтэкс-валморозеекс. [[Эрзянь кель]]с ютавтынзе А.С.Пушкинэнь, М.Ю.Лермонтовонь, Н.А.Некрасовонь, Т.Г.Шевченконь стихест. Эсензэ васенце «Тундо» стихотворениязо печатавсь «Ленинэнь киява» газетасонть 1938 иестэнть. 1950 иестэнть жо нолдавсь «Мирэнть кис» пусмось. Тезэ совасть патриотической произведеният ды А.Суриковонь, С.Шипачёвонь, И.Суриковонь ды М.Исаковскоень стихест-морост ютавтовкстнэ. 1970 иетнень прядовомсто ды 80-це иетнень ушодовомсто лиссть эштё зярыя пусмот: «Сквозь свинцовые вихри», «Валдо ведьбайге», «Толбандянь сяткт», «Кемема» ды лият. 1994 иестэнть нолдавсь «Васень теште» художественно-документальной повестесь, кона ёвтни Мордовиясто Советской Союзонь васенце Геройденть И.А. Пожарскойде. 2000 иестэнть поэтэнть лиссь «Сюкпря» стихень пусмось, конась сёрмадозь рузонь ды эрзянь кельтнесэ. Павел Кириллович Любаев Ине Отечественной войнань участник ды казезь Отечественной войнань II-це степенень Орденсэ, «За боевые заслуги», «За оборону Сталинграда» медальтнесэ.
@@ -122,6 +122,9 @@
 == Сёрм.: ==
 * Ю. Еремина
 * О.В. Абрамова 
+
+== Лисьм.: ==
+<references />
 
 [[Категория:Эрзянь валморонь ладсийть|Л]]
 [[Категория:Эрзянь кель|Л]]
