/* Содавикс ломанть те велестэнть */

--- a/Покш_Толкан_веле_(Похвистнева_буень).mw
+++ b/Покш_Толкан_веле_(Похвистнева_буень).mw
@@ -85,7 +85,7 @@
 * И. Н. Бузуев<ref>[http://pohgor.ru/ourcity/bestpeople/bestpeople_161.html Сайи ГО Похвистнево. Лучшие люди города. {{Ref-ru}}]</ref> — агроном 
 *  [[Дуняшин, Алексей Васильевич|Алек Дуняшин]]<ref name="«Эрзянь Мастор»">[http://www.erzia.saransk.ru/arhiv.php?n=1190&nom11=257  «Эрзянь Мастор», №257, САМАРА ЁНКСОНЬ СОДАВИКС ЭРЗЯТНЕ]{{Ref-myv}}</ref>—  эрзянь прозаик, публицист, критик.
 * [[Журавлёвонь, Числав Григорьевич|Числав Журавлёв]]<ref name="finugor.ru">[http://finugor.ru/news/erzyanskiy-poet-chislav-zhuravlyov-k-dnyu-rozhdeniya-predstavil-svoe-tvorchestvo-v-internete finugor.ru Эрзянский поэт Числав Журавлёв к дню рождения представил свое творчество в Интернете{{Ref-ru}}]</ref> — [[Эрзя|эрзянь]] сёрмадей ды валморозей.
-* [[Кавтаськин, Лука Семенович|Л. С. Кавтаськин]]<ref>[http://fulr.karelia.ru/Resursy/Sozdateli_nacionalnyh_finno-ugorskih_literatur_i_folklora/Luka_Semenovich_Kavtaskin/ Финно-угорские библиотеки России // Лука Семенович КАВТАСЬКИН. Республика Мордовия {{Ref-ru}}]</ref> — ученой, тонавтыця, фольклоронь пурныця
+* [[Кавтаськин, Лука Семенович|Лука Семенович Кавтаськин]]<ref>[http://fulr.karelia.ru/Resursy/Sozdateli_nacionalnyh_finno-ugorskih_literatur_i_folklora/Luka_Semenovich_Kavtaskin/ Финно-угорские библиотеки России // Лука Семенович КАВТАСЬКИН. Республика Мордовия {{Ref-ru}}]</ref><ref name="Библиотека_Кавтаськин">[http://www.lib.e-mordovia.ru/Library/?Char=%CA&id=0 Библиотека Мордовской литературы. Кавтаськин Лука Семенович] {{ref-ru}}</ref> — ученой, тонавтыця, фольклоронь пурныця
 * А. И. Колесова, Р. А. Пыряева<ref>[http://oktobers.moy.su/index/0-7 ГБОУ Самарской области СОШ пос. Октябрьский ГО Похвистнево Самарской области ПРОЙДЕН  ПУТЬ, ДОСТОЙНЫЙ  ДОБРЫХ  СЛОВ.{{Ref-ru}}]</ref>  — тонавтыцят
 * Ю. В. Мишакин<ref>[http://boltolkay.ru/head/biography.html Администрация сельского поселения Большой Толкай Похвистневского района Самарской области. Биография  {{Ref-ru}}]</ref> — Покш Толкан веленть прявт ( 2010 ожоковонь 18 чистэ).
 * [[Радаев, Василий Кузьмич|Василий Кузьмич Радаев]]<ref>[http://pomnipro.ru/memorypage25263/biography Радаев Василий Кузьмич — Биография{{Ref-ru}}]</ref><ref>[http://www.mordovmedia.ru/poster/8230/ «Фронтовик, писатель» Выставка, посвященная В.К. Радаеву {{Ref-ru}}]</ref><ref name="Библиотека_Радаев ">[http://www.lib.e-mordovia.ru/Library/?Char=%D0&id=1  Библиотека Мордовской литературы. Радаев Василий Кузьмич] {{ref-ru}}</ref> — эрзянь сёрмадей, фольклоронь пурныця, «Сияжар» морокерьксэнть сёрмадыцязо.
