*Empty MediaWiki Message*

--- a/Чей_веле_(Инзейбуе).mw
+++ b/Чей_веле_(Инзейбуе).mw
@@ -59,7 +59,7 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Чей веле''' ({{Lang-ru|Челдаево}}) — эрзянь<ref>[http://www.lib.e-mordovia.ru/Library/?Char=%CA&id=1 Калинкин Иван Алексеевич {{ref-ru}}]</ref> веле [[Инзейбуе]]сэ [[Ульянонь ёнкс]]со.
+'''Чей веле''' ({{Lang-ru|Челдаево}}) — эрзянь<ref name="Библиотека_Калинкин">[http://www.lib.e-mordovia.ru/Library/?Char=%CA&id=1 Библиотека Мордовской литературы. Калинкин Иван Алексеевич {{ref-ru}}]</ref> веле [[Инзейбуе]]сэ [[Ульянонь ёнкс]]со.
 
 Ашти буень куншка таркастонть 40 [[вайгельпе|вп]] пелевеёнксов, [[Тале лей]] ваксонзо.
 
@@ -71,7 +71,7 @@
 
 == Содавикс ломанть те велестэнть ==
 Чей велесэ чачсть:
-* [[Калинкин, Иван Алексеевич|Иван Калинкин]]<ref>[http://www.lib.e-mordovia.ru/Library/?Char=%CA&id=1 Калинкин Иван Алексеевич {{ref-ru}}]</ref> — эрзянь сёрмадей.   
+* [[Калинкин, Иван Алексеевич|Иван Алексеевич Калинкин]]<ref name="Библиотека_Калинкин"/> — эрзянь сёрмадей   
 
 == Сёрм.: ==
 <references />
