*Empty MediaWiki Message*

--- a/Чей_веле_(Инзейбуе).mw
+++ b/Чей_веле_(Инзейбуе).mw
@@ -73,7 +73,7 @@
 Чей велесэ чачсть:
 * [[Калинкин, Иван Алексеевич|Иван Алексеевич Калинкин]]<ref name="Библиотека_Калинкин"/> — эрзянь сёрмадей   
 
-== Сёрм.: ==
+== Лисьм.: ==
 <references />
 
 [[Category:Ульянонь ёнксонь велеть|Ч]]
