*Empty MediaWiki Message*

--- a/Карсаевка_(Белинской_буе).mw
+++ b/Карсаевка_(Белинской_буе).mw
@@ -65,10 +65,10 @@
 == Веленть лемденть  ==
 == Содавикс ломанть те велестэнть ==
 * Т.Ф. Якушкин<ref name="МРОКМ им. И.Д. Воронина_Т.Ф. Якушкин">[http://www.mrkm.ru/news/?id=199  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Т.Ф. Якушкин] {{ref-ru}}</ref> — сёрмадей 
-
+* [[Карасев Алексей Иванович|Алексей Иванович Карасев]]<ref name="Библиотека_Карасев">[http://www.lib.e-mordovia.ru/Library/?Char=%CA&id=2 Библиотека Мордовской литературы. Карасев Алексей Иванович] {{ref-ru}}</ref> — мокшонь валморозей, сёрмадей 
 
 == Веленть эрямозо  ==
-Эрьке '''Учань Ваямо''' (ревень ваямо тарка) ды '''Вирява''' латкр улить веленть ваксо<ref name="Древности Пензенского края"/>. 
+Эрьке '''Учань Ваямо''' (ревень ваямо тарка) ды '''Вирява''' латко улить веленть ваксо<ref name="Древности Пензенского края"/>. 
 == Лисьм.: ==
 <references />
 
