*Empty MediaWiki Message*

--- a/Маризь_Кемаль.mw
+++ b/Маризь_Кемаль.mw
@@ -35,7 +35,7 @@
 
 Васенце валморонзо лисемась путови [[1980]] иентень. Умарьковонь номерсэнть «Сятко» журналонть ульнесь печатазь «Эйкакшчинь лавсь» [[валморо]]зо. Секе шкастонть кармась улеме эрьва [[ие]]нь од ломанень литераторонь семинартнэсэ. «Сятко» журналось кармась макснеме сонзэ валморонзо. [[1987]] иестэ лись ниле сёрмадеень пурнавкс «Маней васолкст», ков совасть Маризь Кемалень покш кочкавкс валморонзо. [[1988]] иестэ Мордовиянь книгань нолдамокудось-издательствась нолдынзе сонзэ васенце пурнавксонзо «Лавсь»<ref name="Информационный центр">[http://m.finugor.com/news/s-dnem-rozhdeniya-mariz-kemal Информационный центр Финно-угорских народов. С днем рождения, Маризь Кемаль!] {{ref-ru}}</ref>.
 
-Омбоце пурнавксозо лиссь [[1994]] иестэ «Штатол»<ref name="«Erzäks.ru»">[http://erzyaks.ru/mariz-kemal-ya-nuzhna-poka-poka-zhivut-erzyane/  «Erzäks.ru». Маризь Кемаль: «Я нужна, пока живут эрзяне»] {{ref-ru}}</ref> лем ало, сонзэ эйсэ валморыцясь арсесь эрямодонть, вечкемадонть, кезэрень [[эрзят|эрзянь раськеденть]]. Тей совась виев, парсте сёрмадозь поэмазо «Мон — эрзян!», конасонть Маризь Кемаль сти ловныцятнень икеле ломанекс, конань теевсь-путовсь эсь раськенть вечкемась, пертьпельксэсь ды эрямоёжось.
+Омбоце пурнавксозо лиссь [[1994]] иестэ «Штатол»<ref name="«Erzäks.ru»">[http://erzyaks.ru/mariz-kemal-ya-nuzhna-poka-poka-zhivut-erzyane/  «Erzäks.ru». Маризь Кемаль: «Я нужна, пока живут эрзяне»] {{ref-ru}}</ref> лем ало, сонзэ эйсэ валморыцясь арсесь эрямодонть, вечкемадонть, кезэрень [[эрзят|эрзянь раськеденть]]. Тей совась виев, парсте сёрмадозь поэмазо «Минь — эрзят!»<ref name="Association of Finno-Ugric Literatures">[http://www.suri.ee/inf/erzaer.html  Association of Finno-Ugric Literatures. «Минь – эрзят!»] {{ref-myv}}</ref>, конасонть Маризь Кемаль сти ловныцятнень икеле ломанекс, конань теевсь-путовсь эсь раськенть вечкемась, пертьпельксэсь ды эрямоёжось.
 2014 иестэ эсинзэ ярмаконзо ланкс нолдась «Масторов нолдасынек сюкпрянок»<ref name="Информационный центр _Вышла в">[http://finugor.ru/vyshla-v-svet-novaya-kniga-poetessy-mariz-kemal-na-erzyanskom-yazyke  Информационный центр Финно-угорских народов. Вышла в свет новая книга поэтессы Маризь Кемаль на эрзянском языке] {{ref-ru}}</ref> пурнавксозо. 
 
 == Ванодо истяжо ==
