--- a/Рябовонь,_Анатолий_Павлович.mw
+++ b/Рябовонь,_Анатолий_Павлович.mw
@@ -26,7 +26,7 @@
 '''Анатолий Павлович Рябовонь''' ([[1894]] [[чадыковонь 16 чи]]стэ [[Ламбаське (Ицял буень)|Ламбаське велесэ]], [[Ицялонь буе|Ицялонь буесэ]], [[Мордовия Республикась|Мордовия Республикань]] —  [[1938]] [[панжиковонь 22 чи]]стэ [[Саранск]]ойсэ) — эрзянь [[профессор]], ламо келень содыця, васенце '''Эрзянь букварень пурныця-нолдыця'''. [[1923]] иестэ сти  Московсо [[«Сыргозема» вейсэндявкс]]онть прявтокс, ледезь 1938-це иень [[Панжиков|панжиковонь]] [[23 (комськолмово)|23-це]] чистэ.
 
 == Эрямо пингезэ (Биографиязо) ==
-Рябовонь Анатолий чачсь эрзянь сокиця-видиця семияс, [[Ламбаське (Ицял буень)|Ламбаське велесэ]]<ref name="philol">[http://www.philol.msu.ru/~smu/work/science-day/2011/30.pdf Данильчев Александр Алексеевич «Эрзянско-русский словарик» и «Русско-эрзянский словарь» А. П. Рябова.]{{ref-ru}}, {{ref-myv}}</ref>. Велень школанть прядовомадо мейле тетянзо-аванзо кучизь сонзэ тонавтнеме [[Починковонь духовной училищав]], мейле тонавтни [[Нижегородской оймень (духовной) семинариясо]].
+Рябовонь Анатолий чачсь эрзянь сокиця-видиця семияс, [[Ламбаське (Ицял буень)|Ламбаське велесэ]]<ref name="philol">[http://www.philol.msu.ru/~smu/work/science-day/2011/30.pdf Данильчев Александр Алексеевич «Эрзянско-русский словарик» и «Русско-эрзянский словарь» А. П. Рябова.]{{ref-ru}}, {{ref-myv}}</ref><ref name="«Кудо»">Н.Баюшкин. «Кудо» Эстононь-мокшэрзянь вейсэндявксонть журналозо. 1998, nr. 1 Алтави Анатолий Павлович Рябов профессоронть 104-це иень чачома чинтень{{ref-myv}}</ref>. Велень школанть прядовомадо мейле тетянзо-аванзо кучизь сонзэ тонавтнеме [[Починковонь духовной училищав]], мейле тонавтни [[Нижегородской оймень (духовной) семинариясо]].
 
 == Тонавтнемазо ==
 Тетянзо куломадо мейле кадсы семинариясо тонавтнеманть, ансяк, сёксня 1912-це иестэ пек парсте максы экзамент Нежинской педагогической институтонь келень тонавтнема(филологической) факультетс, конань пек парсте прядсы [[1916 ие|1916]]-це иестэ. Тонавтнемстэ сон кармась содамост [[Латинэнь кель|латинэнь]], [[Англань кель|англань]], [[Суоминь кель|финнэнь]] ды [[Эстэнь кель|эстониянь]] кельтнень.
@@ -36,7 +36,7 @@
 
 == Московсо эрямозо ==
 [[Image:Ryabov Anatoly and his son Richard.jpg|thumb|right|300px|Рябовонь Анатолий Ричард цёранзо марто]]
-[[1923 ие|1923]]-це иестэ эрзятне ды мокшотне панжить Московсо [[«Сыргозема» вейсэндявкс|«Сыргозема» вейсэндявкс]], покш тарка косо явозель морамо кужотненень, конань прявтокс ульнесь А. П. Рябов. Те хоронть лемс Весесоюзонь пачтямокерьксень (радиосо) морамодо мейле масторонть эрьва пельде сыльть пек ламо сёрмат, конатнесэ ломантне ёвтнесть покш ёжомарямодост эсест кельсэ искусстванть марто вастомадонть, вельть седейсэ моразь эрзянь моротнеде.
+[[1923 ие|1923]]-це иестэ эрзятне ды мокшотне панжить Московсо [[«Сыргозема» вейсэндявкс|«Сыргозема» вейсэндявкс]]<ref name="«Кудо»"/>, покш тарка косо явозель морамо кужотненень, конань прявтокс ульнесь А. П. Рябов. Те хоронть лемс Весесоюзонь пачтямокерьксень (радиосо) морамодо мейле масторонть эрьва пельде сыльть пек ламо сёрмат, конатнесэ ломантне ёвтнесть покш ёжомарямодост эсест кельсэ искусстванть марто вастомадонть, вельть седейсэ моразь эрзянь моротнеде.
 
 Морамотнесэ сеедьстэ ульнесть покш ломантькак, примеркс, искусствасо реформаторось В. Э. Мейерхoльд, кона ульнесь «чавозь» эрзя моротнень мазычисэ. Сон пек вечкилинзе А. П. Рябовонь хоронть эрзянь моротнень.
 
@@ -66,11 +66,11 @@
 == НКВД: «Эрзя ды мокшонь раськетнень ятт» ==
 «Вельть покш важодемась» мокшо ды эрзянь культуранть кепедемасонть НКВД-нтень неявсь берянь тевкс. 1937-це иень [[Аштемков|аштемковонь]] 5-це чистэ ульнесь максозь №4  ордер Рябовонь Анатолиень кудосо вешнеманть коряс. Сонзэ пекстызь, ёвтазь «мокшонь ды эрзянь ятокс». Пекстазель сонзэ низэяк, тонавтыцясь Прасковья Фадеевна, а цёраст Ричард ёртозель ушов.
 
-1937-це иень [[Ацамков|ацамковонь]] 17-це чистэнть чумондомасонть мерезель, што сонзэ сиведизь финнэнь ды эстононь шпионтнэ, [[Бубрих, Дмитрий Владимирович|Дмитрий Бубрих]] ды Марк. Нама, А. Рябов кодамояк «антисоветской» тевсэ арасель, ялатеке 1938-це иень [[Панжиков|панжиковонь]] 23-це чистэ ледезель. Калмамо тарказо апак ёвта те шкас.
+1937-це иень [[Ацамков|ацамковонь]] 17-це чистэнть чумондомасонть мерезель, што сонзэ сиведизь финнэнь ды эстононь шпионтнэ, [[Бубрих, Дмитрий Владимирович|Дмитрий Бубрих]] ды Марк. Нама, А. Рябов кодамояк «антисоветской» тевсэ арасель, ялатеке 1938-це иень [[панжиковонь 23 чи]]стэ<ref name="«Кудо»"/> ледезель. Калмамо тарказо апак ёвта те шкас.
 
 Омбоцеде чавизь сонзэ кода «раськень ят» 1952-це иень келень конференциясо, кона алтазель келень коряс «Сталинэнь» роботатненень, истя жо ледезельть Мордовиянь ламо лия покш ломанть. СССР-нь Верховной Судонь Военной коллегиясь 1956-це иень [[Сундерьков|сундерьковонь]] 28-це чистэ полавтызе Верховной Судонь коллегиянь приговоронзо, кона теезель А. П. Рябовонь коряс, секскак тевесь лоткавтозель преступлениянть арасьчинзэ коряс.
 
-А. П. Рябов профессоронть ульнесь нурькине эрямозо, ялатеке сон виензэ максызе эрзянь ломантнень туртов. Сон сёрмадсь малав 30 ловномат эрзянь ды мокшонь кельтнень коряс, конатне кандыть те шкас покш лезэ. Минь сюконятано те покш Эрзянь ломанентень, кирдтяно сонзэ мельсэнек — превсэнек.
+А. П. Рябов профессоронть ульнесь нурькине эрямозо, ялатеке сон виензэ максызе эрзянь ломантнень туртов. Сон сёрмадсь малав 30<ref name="«Кудо»"/> ловномат эрзянь ды мокшонь кельтнень коряс, конатне кандыть те шкас покш лезэ. Минь сюконятано те покш Эрзянь ломанентень, кирдтяно сонзэ мельсэнек — превсэнек.
 
 == Лисьм. ==
 <references />
