*Empty MediaWiki Message*

--- a/Колапа_(Якстерекуро_буе).mw
+++ b/Колапа_(Якстерекуро_буе).mw
@@ -73,14 +73,14 @@
 == Содавикс ломанть те велестэнть ==
 
 * А. И. Родькин <ref name="Краснолосбодск">[http://kc13.ru/index/baranovka_kulikovo/0-29 Краснолосбодск: Колопино] {{ref-ru}}</ref>— врач
-* Б.Е. Кирюшкин — литератураньветиця 
+* [[Кирюшкин, Борис Ефимович|Борис Ефимович Кирюшкин]]<ref name="Библиотека_Кирюшкин">[http://www.lib.e-mordovia.ru/Library/?Char=%CA&id=8 Библиотека Мордовской литературы. Кирюшкин Борис Ефимович] {{ref-ru}}</ref> — литератураньветиця 
 *  Н.Е. Кочкурова — тонавтыця
 * Н.С. Живайкин, И. И. Откин <ref name="Краснолосбодск"/>— куляньсёрмадейть
 * Ю.Н. Азрапкин <ref name="Время и события">[http://www.library.saransk.ru/vms/kalendar.php Время и события.2014:Ю.Н. Азрапкину - 75 лет] {{ref-ru}}</ref>— валморозей
 
 == Веленть эрямозо  ==
 
-== Сёрм.: ==
+== Лисьм.: ==
 <references />
 
 
