*Empty MediaWiki Message*

--- a/Пою_Веле_(Кадонь_буе).mw
+++ b/Пою_Веле_(Кадонь_буе).mw
@@ -64,6 +64,7 @@
 
 == Веленть лемденть  ==
 == Содавикс ломанть те велестэнть ==
+* [[Кишняков Илья Прокофьевич|Илья Прокофьевич Кишняков]]<ref name="БМЛ_Кишняков">[http://www.lib.e-mordovia.ru/Library/?Char=%CA&id=9 Библиотека Мордовской литературы: Кишняков Илья Прокофьевич] {{ref-ru}}</ref> — мокшонь сёрмадей
 * [[Лобанов Виктор Михайлович|Лобанов Виктор Михайлович]]<ref name="БМЛ_Лобанов">[http://www.lib.e-mordovia.ru/Library/?Char=%CB&id=3 Библиотека Мордовской литературы.: Лобанов Виктор Михайлович] {{ref-ru}}</ref> — мокшонь сёрмадей
 
 
