*Empty MediaWiki Message*

--- a/Чаунзабуе.mw
+++ b/Чаунзабуе.mw
@@ -118,7 +118,7 @@
 * [[Сабур-Мачкасы (Чаунзабуе)|Сабур-Мачкасы]] 
 * [[Семеновка (Чаунзабуе)|Семеновка]]   
 * [[Соколов Гарт (Чаунзабуе)|Соколов Гарт]] 
-* [[Сорлиней (Чаунзабуе)|Сорлиней]]  
+* [[Серлиней (Чаунзабуе)|Серлиней]]  
 * [[Сырятино (Чаунзабуе)|Сырятино]] 
 * [[Тепловка (Чаунзабуе)|Тепловка]]  
 
