--- a/Хилково_(Торбейбуе).mw
+++ b/Хилково_(Торбейбуе).mw
@@ -61,7 +61,8 @@
 '''Хилково''' ({{Lang-ru|с. Хилково}}) — веле [[Торбейбуе]]сэ, [[Мордовия]]со.
 == Веленть лемденть  ==
 == Содавикс ломанть те велестэнть ==
-* [[Козлов, Юрий Федорович|Юрий Федорович Козлов]]<ref name="БМЛ_Козлов">[http://www.lib.e-mordovia.ru/Library/?Char=%CA&id=12 Библиотека Мордовской литературы: Козлов Юрий Федорович] {{ref-ru}}</ref> — кулянь-сёрмадей
+* [[Козлов, Юрий Федорович|Юрий Федорович Козлов]]<ref name="БМЛ_Козлов">[http://www.lib.e-mordovia.ru/Library/?Char=%CA&id=12 Библиотека Мордовской литературы: Козлов Юрий Федорович] {{ref-ru}}</ref> — кулянь-сёрмадей, сёрмадей
+
 == Лисьм.: ==
 <references />
 
