*Empty MediaWiki Message*

--- a/Ташто_Найман_веле_(Покш_Килейбуе).mw
+++ b/Ташто_Найман_веле_(Покш_Килейбуе).mw
@@ -78,8 +78,8 @@
 
 ==Содавикс ломанть те велестэнть==
 Ташто Найман велесэ чачсть:
-* [[Абрамов, Кузьма Григорьевич|Абрамовонь Кузьма]] (1914—2008) — эрзянь содавикс сёрмадей.
-* [[Коломасов, Василий Максимович|Коломасовонь Василий]]  (1909—1987) — эрзянь советэнь сёрмадей.
+* [[Абрамов, Кузьма Григорьевич|Абрамовонь Кузьма]]<ref name="БМЛ_Абрамов">[http://www.lib.e-mordovia.ru/Library/?Char=%C0&id=0 Библиотека Мордовской литературы: Абрамов Кузьма Григорьевич] {{ref-ru}}</ref> (1914—2008) — эрзянь содавикс сёрмадей.
+* [[Коломасов, Василий Максимович|Коломасовонь Василий]]<ref name="БМЛ_Коломасов">[http://www.lib.e-mordovia.ru/Library/?Char=%CA&id=13 Библиотека Мордовской литературы: Коломасов Василий Максимович] {{ref-ru}}</ref>  (1909—1987) — эрзянь советэнь сёрмадей.
 == Веленть эрямозо  ==
 [[XIX пинге|XIX п.]] прядомсто — [[XX пинге|XX п.]] ушодомсто велесэнть тейнесть [[чувтт|чувтонь]] [[койме]]ть, [[нешке]]нь кудот. [[1929 ие]]стэ ульнесь теезь вейсхоз «Од ки» ({{Lang-ru|«Новый путь»}}), [[1996 ие]]стэ — «Старонайманонь» вельхозяйствань производствань пурнавкс ({{Lang-ru|СХПК «Старонайманский»}}), [[1998 ие]]стэ саезь — 2 К(Ф)Х. Неень шкасто велесэнть — куншкань тонавтнема школа, ловнома кудо, Шкинемань кудо, медицинань тарка, лавка.
 
