*Empty MediaWiki Message*

--- a/Ташто_Найман_веле_(Покш_Килейбуе).mw
+++ b/Ташто_Найман_веле_(Покш_Килейбуе).mw
@@ -86,8 +86,7 @@
 == Лия ёнкссо истя лем ало ==
 Ули  [[Ульянонь ёнкс|Ульяновскоень масторсо]]  Павловкань веле - лемезе  Найман веле.
 
-
-== Сёрм.: ==
+== Лисьм.: ==
 <references />
 [[Category:Мордовиянь велеть|Т]]
 [[Category:Покш Килейбуень велеть|Т]]
