*Empty MediaWiki Message*

--- a/Кяшал_(Атюрьбуе).mw
+++ b/Кяшал_(Атюрьбуе).mw
@@ -70,6 +70,7 @@
 Лемесь-термин:<ref name="Память, запечатленная в слове"/> ({{Lang-mdf|кяше}} {{Lang-ru|«деготь»}}) + ''-лы'' топоформантось.  
 == Содавикс ломанть те велестэнть ==
 Кяшал велесэ чачсть:
+*  [[Костяйкин, Федор Максимович|Федор Максимович Костяйкин]]<ref name="Библиотека_Костяйкин">[http://www.lib.e-mordovia.ru/Library/?Char=%CA&id=16 Библиотека Мордовской литературы: Костяйкин Федор Максимович] {{ref-ru}}</ref>— мокшонь сёрмадей
 *  [[Малькин, Александр Степанович|Александр Малькин]]<ref name="Библиотека_Малькин">[http://www.lib.e-mordovia.ru/Library/?Char=%CC&id=1 Библиотека Мордовской литературы. Малькин Александр Степанович] {{ref-ru}}</ref><ref name="МРОКМ им. И.Д. Воронина_К юбилею А.С. Малькина">[http://www.mrkm.ru/news/?id=489  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». К юбилею А.С. Малькина] {{ref-ru}}</ref>— мокшонь сёрмадей
 
 ==Веленть эрямозо==
