*Empty MediaWiki Message*

--- a/Кривошеев,_Илья_Петрович.mw
+++ b/Кривошеев,_Илья_Петрович.mw
@@ -22,11 +22,11 @@
  |вальма                = 
  |википурнавкс         = 
 }}
-'''Илья Петрович Кривошеев''' ({{Lang-myv|Илька Морыця}}) ([[1898 ие]]стэ [[медьковонь 19 чи]] [[Саратов ёнкс]]со Маяк хуторсо - [[1967 ие]]стэ [[таштамковонь 11 чи]] [[Ицяло (Ицял буе)|Ицяло]])— [[Эрзянь кель|эрзянь]] кельсэ содавикс сёрмадей, валморонь ладсий.
+'''Илья Петрович Кривошеев''' ({{Lang-myv|Илька Морыця<ref name="БМЛ_Кривошеев">[http://www.lib.e-mordovia.ru/Library/?Char=%CA&id=18 Библиотека Мордовской литературы: Кривошеев Илья Петрович (Илька Морыця)] {{ref-ru}}</ref>}}) ([[1898 ие]]стэ [[медьковонь 19 чи]] [[Саратов ёнкс]]со Маяк хуторсо - [[1967 ие]]стэ [[таштамковонь 11 чи]] [[Ицяло (Ицял буе)|Ицяло]])— [[Эрзят|эрзянь]]<ref name="inpenza"/><ref name="ЛИТЕРАТУРНОЕ">[http://zubova-poliana.narod.ru/creation9-9994-99.htm ЛИТЕРАТУРНОЕ ТВОРЧЕСТВО ЗУБОВОПОЛЯНЦЕВ] {{ref-ru}}</ref> содавикс сёрмадей, валморонь ладсий.
 
 Мордовиянь заслуженной тонавтыцясь И.П.Кривошеев сехте пек содавикс кода Илька Морыця сонзэ пек вадря, гайгиця, морыця стихензэ-валморонзо кувалма. 
 
-Чачсь [[1898 ие]]нь [[Медьковонь 19 чи|медьковонь 19]]-це чистэ [[Саратов ёнкс]]сонь Лопатинской буень Маяк хуторсо. Тетязо, Пётр Васильевич, кузнецель, [[ава]]зо, [[Кривошеева, Ефимия Петровна|Ефимия Петровна]], -  ульнесь эрзянь содавикс ёвксонь морыцякс-лацицякс (сказительницакс). Сонзэ пельде самай кармаськак содамо сы шкань поэтэсь-валморонь сёрмадыцясь раськень поэзиянть. Эрзянь келенть сон кармась вечкемензэ эйкакшпингестэ. Руз Камешкирэнь училищанть прядомадо мейле тонавтсь школасо эйкакшт, мейле сонсь тонавтнесь. Прядызе Саратовонь университетэнть -- сась эрямо Саранскоев, важодсь педтехникумсо. Меельце иетнень перть Илья Петрович анокстась тонавтыцят Ицялонь педучилищасо. 1934 иестэ саезь сон - Россиянь Сёрмадеень союзонь член.
+Чачсь [[1898 ие]]нь [[Медьковонь 19 чи|медьковонь 19]]-це чистэ [[Саратов ёнкс]]сонь Лопатинской буень Маяк хуторсо<ref name="БСЭ_Кривошеев">[http://dic.academic.ru/dic.nsf/bse/99978/ Большая советская энциклопедия: Кривошеев Илья Петрович] {{ref-ru}}</ref><ref name="inpenza">[http://inpenza.ru/lopatino/mayak.php МАЯК Лопатинского района Пензенской области] {{ref-ru}}</ref>. Тетязо, Пётр Васильевич, кузнецель, [[ава]]зо, [[Кривошеева, Ефимия Петровна|Ефимия Петровна]]<ref name="БМЛ_Кривошеев"/>, -  ульнесь эрзянь содавикс ёвксонь морыцякс-лацицякс (сказительницакс). Сонзэ пельде самай кармаськак содамо сы шкань поэтэсь-валморонь сёрмадыцясь раськень поэзиянть. Эрзянь келенть сон кармась вечкемензэ эйкакшпингестэ. Руз Камешкирэнь училищанть прядомадо мейле тонавтсь школасо эйкакшт, мейле сонсь тонавтнесь. Прядызе Саратовонь университетэнть - сась эрямо Саранскоев, важодсь педтехникумсо. Меельце иетнень перть Илья Петрович анокстась тонавтыцят Ицялонь педучилищасо. 1934 иестэ саезь сон - СССР-нь Сёрмадеень Вейсэндявксонь улиця<ref name="Городские">[http://cityratings.ru/samye-starye-doma-v-saranske/ Городские рейтинги. Самые древние жилые дома Саранска] {{ref-ru}}</ref>.
 
 
 Илька морыцянть лиссть кеменде ламо кирьяпусмонзо, сёрмадсь пьесаткак. Эйкакштнень туртов пьесанзо сёрмадозь эрзянь ёвксонь коряс. Васеньце валморонзо тиринь кельсэ  «Пакшатненень» («Детям»), «Большевикень вал» («Большевистское слово»), «Лавсень моро» («Колыбельная песня») улнесть публиковазь 1923 иесте «Якстере сокиця» кулялопасонть («Красный пахарь»). 20-це иетнесте сонзэ валморонзо лиснить «Якстере теште» кулялопасонть («Красная звезда»), кона лисниль Московсо, ды Одсибирень кулялопасо «Од эрямо» («Новая жизнь»). 1929 иесте Московсо Центриздатсо лись эрзянь валморозейтнень вейсэнь пурнавкс «Васень сяткт» («Первые искры»), ков совасть зняро-бути валморот Илька Морыцяньгак, конат алтазевсть велень эрямонте, пертпельксэнте, пакшатнене.
@@ -34,8 +34,10 @@
 Васеньце кирьяпусмонзо Илька Морыцянь  «Коммунань толт» («Огни коммуны») лись 1933 иесте «Молодая гвардия» издательствасо. Теке иесте Саранскойсэ лиси омбоце сонзе валморонь пурнавкссозо  «Валскень зорява» («На утренней заре»). Юртонь темас сёрмадовкснесэ - од эрямонь самось ды сонзэ кепедстямость. Пек ламо сонзе 30-це иетнень валморонь теемасонзо аштить пертпельксэнь ды пакшань тематне. 1943 иесте лись «Народонь вайгель» («Голос народа») пурнавксозо, конаньсэ валморозеесь кепедсти оймень покшолманзо советеэнь ломатнень.
 
 Ине Туриманть прядоманзо мейле листь: «Монь ким» («Мой путь», 1946), «Тундонь сад» («Весенний сад»,1952), «Монь Родинам» («Моя Родина», 1954), «Избранное» (рузонь кельсэ, 1955), «Стихть ды поэмат» (1958), «Славан эрямонть» («Славлю жизнь», 1963), «Кеман эрямос» («Верю в жизнь», 1967), «Морамонь ким» («Мой песенный путь», 1968) 
-
+ 
 Кулось [[таштамковонь 11 чи]] 1967 иесте, калмазь  [[Ицяло (Ицял буе)|Ицялосо]], тосо путозь кеврунго валморозееньте.
+== Лисьм.: ==
+<references />
 
 [[Category:Эрзянь сёрмадейть|К]]
 [[Category:Эрзянь валморонь ладсийть|К]]
