--- a/Кривошеева,_Ефимия_Петровна.mw
+++ b/Кривошеева,_Ефимия_Петровна.mw
@@ -25,18 +25,19 @@
 }}
 '''Кривошеева, Ефимия Петровна''' (1867 [[аштемковонь 1 чи]] [[Пензань ёнкс|Пензань ёнкссонь]] Тарасовка велесэ — [[1936]] [[аштемковонь 24 чи]]) — [[Эрзянь кель|эрзянь]] кельсэ содавикс сёрмадей, валморонь ладсий.
 
-Чачсь  [[1867]] [[аштемковонь 1 чи]] [[Пензань ёнкс|Пензань ёнкссонь]] Кемешкирской буень Тарасовка велесэ<ref name="МРОКМ им. И.Д. Воронина_Народная сказительница">[http://www.mrkm.ru/news/?id=362  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Народная сказительница] {{ref-ru}}</ref> сокицянь-видицянь семиясо. Сонзэ ярямонзо вельде парсте неяви се, мезе макссь Советской властесь икеле лепштязь важодиця раськенть шкинеманзо панжовомантень. 
+Чачсь  [[1867]] [[аштемковонь 1 чи]] [[Пензань ёнкс|Пензань ёнкссонь]] Кемешкирской буень Тарасовка велесэ<ref name="МРОКМ им. И.Д. Воронина_Народная сказительница">[http://www.mrkm.ru/news/?id=362  «Мордовский республиканский объединенный краеведческий музей им. И.Д. Воронина». Народная сказительница] {{ref-ru}}</ref><ref name="inpenza"/> сокицянь-видицянь семиясо. Сонзэ ярямонзо вельде парсте неяви се, мезе макссь Советской властесь икеле лепштязь важодиця раськенть шкинеманзо панжовомантень. 
 
 Е.П. Кривошеева, сёрмас а содыця авась, сюпалгавтызе эрзянь литературанть од моросо, ёвтнемасо, ёвкссо, конатнень лацесь эрямонзо перть. Сонзэ содыцянзо лецтнить, Ефимия Петровна содась пек ламо раськень морот, кезэрень  ёвкст, лайшемат, конатнень сон вечксь ды маштсь ёвтнемест ды морамост кунсолыцятненень. А сонзэ кунсолыцякс ды содыцякс кармась улеме весе минек масторонь ламо раськень раскеть.
 
 Ефимия Петровнань лемензэ минек масторонь ловныцятьне кармасть содамо [[1936]] иестэ, зярдо «Правда» кулялопасонть рузонь кельсэ ульнесь печатазь «Кировдо лайшемась»<ref name="МРОКМ им. И.Д. Воронина_Народная сказительница"/>. Те сёрмадовксось алтазель Коммунистической партиянть инее цёранстэнь Сергей Миронович Кировнень, конань Ленинградсо маштызь раськенть яттне. 
 
-«Кировдо лайшемась» поэманть аванзо мальга сёрмадызе эрзянь содавикс валморозеесь Илька Морыця ([[Кривошеев, Илья Петрович|И.П. Кривошеев]]). Те поэмась ютавтозь ламо лия раськень кельс. Е.П. Кривошеева эсензэ мелеензэ-превензэ, седейшкавань ёжомарямонзо эрзянь раськенть эрямонзо коряс видестэ невтизе моросонзо, аварькшнемасонзо, лайшемасонзо, конатне лиссть «Лайшемат ды морот» ды «Авань в айгель» пурнавксснесэ. Куломадо мейле сказительницанть весе сёрмадовксонзо  нолдазельть башка кирь пусмозо «Е.П. Кривошеева». 
+«Кировдо лайшемась» поэманть аванзо мальга сёрмадызе эрзянь содавикс валморозеесь Илька Морыця ([[Кривошеев, Илья Петрович|И.П. Кривошеев]]<ref name="БМЛ_Кривошеева"/>). Те поэмась ютавтозь ламо лия раськень кельс. Е.П. Кривошеева эсензэ мелеензэ-превензэ, седейшкавань ёжомарямонзо [[эрзят|эрзянь раськенть]] эрямонзо коряс видестэ невтизе моросонзо, аварькшнемасонзо, лайшемасонзо, конатне лиссть «Лайшемат ды морот» ды «Авань в айгель» пурнавксснесэ (Саранск, 1950)<ref name="inpenza"/>. Куломадо мейле сказительницанть весе сёрмадовксонзо  нолдазельть башка кирь пусмозо «Е.П. Кривошеева». 
 
-Е.П. Кривошеева сюпалгавтызе эрзянь курксто-кургс поэтической шкинемасонзо одс эпитетсэ, сравнениясо, метафорасо, конатнень вельде невти тиринь раськенть эрямонзо кезэрень пингстэ саезь  социалистической строенть кемекстмао иетнес. 
-«Истя ульнесь» моросонть сказительницась седей рискс марто ёвтни сеть стака шкатнеде, зярдо эрзятьнень эзть лово ломаньскак, сынь ульнесть «соронь таркас».
+Е.П. Кривошеева сюпалгавтызе эрзянь курксто-кургс поэтической шкинемасонзо одс эпитетсэ, сравнениясо, метафорасо, конатнень вельде невти тиринь раськенть эрямонзо кезэрень пингстэ саезь  социалистической строенть кемекстамо иетнес. 
 
-Кулось Ефимия Петровна [[аштемковонь 24 чи]]стэ [[1936]] иесте.
+«Истя ульнесь» моросонть сказительницась седей рискс марто ёвтни сеть стака шкатнеде, зярдо эрзятьнень эзть лово ломаньскак, сынь ульнесть «соронь таркас». Эрямонть перть весемикс ульнесь сёрмадозь [[50 (ловома вал)|ветьгеменьде]]<ref name="finugor">[http://finugor.ru/v-saranske-postavyat-dosku-pamyati-erzyanskoi-skazitelnitse Finugor.ru: В Саранске поставят доску памяти эрзянской сказительнице] {{ref-ru}}</ref> седе ламо произведеният. Саран ошонь Мокшонь куросо, косо Е. Кривошеева эрясь ульнесь мель путомс лецтнема кевень лазпе<ref name="finugor"/>. 
+
+Кулось Ефимия Петровна [[аштемковонь 24 чи]]стэ [[1936]] иесте<ref name="БМЛ_Кривошеева">[http://www.lib.e-mordovia.ru/Library/?Char=%CA&id=19 Библиотека Мордовской литературы: Кривошеева Ефимия Петровна] {{ref-ru}}</ref>. Калмазь [[Саран ош]]со<ref name="inpenza">[http://inpenza.ru/kameshkir/tarasovka.php ТАРАСОВКА Камешкирского района Пензенской области] {{ref-ru}}</ref>.
   
 
 == Лисьм.: ==
