*Empty MediaWiki Message*

--- a/Мокшонь_Ювня_(Торбейбуе).mw
+++ b/Мокшонь_Ювня_(Торбейбуе).mw
@@ -1,6 +1,6 @@
 {{ЭТ
  |статус                  = веле
- |Эрзянь лем              = Мокшень Ювня
+ |Эрзянь лем              = Мокшонь Ювня
  |оригинальное название   = {{Lang-ru|с. Мордовские Юнки}}
  |изображение             = 
  |подчинение              = 
@@ -11,8 +11,8 @@
  |описание флага          = 
  |ширина герба            = 
  |ширина флага            = 
-  |lat_dir = |lat_deg = 54.143987|lat_min = |lat_sec = 
-  |lon_dir = |lon_deg = 43.457251|lon_min = |lon_sec = 
+  |lat_dir = |lat_deg = 54.146123|lat_min = |lat_sec =   
+  |lon_dir = |lon_deg = 43.460341 |lon_min = |lon_sec = 
   |CoordAddon             = 
   |CoordScale             = 
  |размер карты страны     = 
@@ -48,7 +48,7 @@
   |этнохороним            = 
  |часовой пояс            = +3
  |DST                     = 
- |телефонный код          = 
+ |телефонный код          = 83456 
  |почтовый индекс         = 431036
  |почтовые индексы        = 
  |автомобильный код       = 13
@@ -58,11 +58,14 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Мокшень Ювня''' ({{Lang-ru|с. Мордовские Юнки}}) — веле [[Торбейбуе]]сэ, [[Мордовия]]со.
+'''Мокшонь Ювня''' ({{Lang-ru|с. Мордовские Юнки}}, {{Lang-mdf|Мокшень Ювня веле}}) — [[мокшот|мокшонь]] веле [[Мордовия Республикась|Мордовия Республикасонть]]. Велесь совавтови [[Торбейбуе|Торбей буeньте]].
+
 == Веленть лемденть  ==
 == Содавикс ломанть те велестэнть ==
-== Сёрм.: ==
+* [[Кригин, Василий Алексеевич|Василий Алексеевич Кригин]]<ref name="БМЛ_Кригин">[http://www.lib.e-mordovia.ru/Library/?Char=%CA&id=20 Библиотека Мордовской литературы: Кригин Василий Алексеевич] {{ref-ru}}</ref> — валморонь сёрмадей
+== Лисьм.: ==
 <references />
 
 [[Category:Мордовиянь велеть]]
 [[Category:Торбейбуень велеть]]
+[[Category:Мокшонь велеть]]
