*Empty MediaWiki Message*

--- a/Пишля_(смустьтне).mw
+++ b/Пишля_(смустьтне).mw
@@ -1,7 +1,7 @@
 '''Пишля''':
 ;Топонимт
 * [[Татарская Пишля (Оразайбуе)|Татарская Пишля]] — печаксонь веле [[Оразайбуе]]сэ [[Мордовия]]со.
-* [[Мордовская Пишля (Оразайбуе)|Мордовская Пишля]] — рузонь веле [[Оразайбуе]]сэ [[Мордовия]]со. 
+* [[Мокшонь Пишля (Оразайбуе)|Мокшонь Пишля]] — рузонь веле [[Оразайбуе]]сэ [[Мордовия]]со. 
 * [[Пишля (Оразайбуе)|Пишля]] — рузонь веле [[Оразайбуе]]сэ [[Мордовия]]со. 
 * [[Емла Пишляйня (Атюрьбуе)|Емла Пишляйня]]  — печаксонь веле [[Атюрьбуе]]сэ [[Мордовия]]со.
 
