/* Оразайбуень ошт ды велеть */

--- a/Оразайбуе.mw
+++ b/Оразайбуе.mw
@@ -76,6 +76,7 @@
 * [[Макаровка (Оразайбуе)|Макаровка]] – ({{Lang-ru|д. Макаровка}})
 * [[Мокшень Баймак (Оразайбуе)|Мокшень Баймак]] – ({{Lang-ru|д. Мордовское Баймаково}})
 * [[Мокшень Куженя (Оразайбуе)|Мокшень Куженя]] – ({{Lang-ru|д. Мордовская Полянка}})
+* [[Мокшонь Пишля (Оразайбуе)|Мокшонь Пишля]] – ({{Lang-ru|c. Мордовская Пишля}})
 * [[Мурай Веле (Оразайбуе)|Мурай Веле]] – (лиякс кортыть: ''Кельме Пора'', {{Lang-ru|c. Новая Муравьевка}})
 * [[Новый Усад (Оразайбуе)|Новый Усад]] – ({{Lang-ru|c. Новый Усад}})
 * [[Oд веле (Оразайбуе)|Oд веле]] – ({{Lang-ru|c. Куликовка}})
@@ -118,7 +119,6 @@
 * [[Кулишейка (Оразайбуе)|Кулишейка]] – ({{Lang-ru|c. Кулишейка}})
 * [[Луговая (Оразайбуе)|Луговая]] – ({{Lang-ru|c. Луговая}})
 * [[Михайловка (Оразайбуе)|Михайловка]] – ({{Lang-ru|д. Михайловка}})
-* [[Мордовская Пишля (Оразайбуе)|Мордовская Пишля]] – ({{Lang-ru|c. Мордовская Пишля}})
 * [[Медведовка (Оразайбуе)|Медведовка]] – ({{Lang-ru|д. и ж. р. Медведовка}})
 * [[Надеждинка (Оразайбуе)|Надеждинка]] – ({{Lang-ru|д. Надеждинка}})
 * [[Огарево (Оразайбуе)|Огарево]] – ({{Lang-ru|c. Огарево}})
