new version ([[Commons:Commons:GlobalReplace|GlobalReplace v0.6.5]])

--- a/Швеция_Мастор.mw
+++ b/Швеция_Мастор.mw
@@ -5,7 +5,7 @@
  |Эрзянь лем=Швеция Мастор
  |Оригинальное название=Konungariket Sverige
  |Родительный падеж=Шведэнь
- |Герб=Coat of Arms of Sweden.svg
+ |Герб=Great coat of arms of Sweden.svg
  |Название гимна=Du gamla, Du fria
  |Государственный строй=
  |На карте=Location Sweden EU Europe.png
