--- a/Евсевьев,_Макар_Евсевьевич.mw
+++ b/Евсевьев,_Макар_Евсевьевич.mw
@@ -26,7 +26,7 @@
 '''Евсевьев (Кобаев<ref name="fulr">[http://fulr.karelia.ru/Resursy/Sozdateli_nacionalnyh_finno-ugorskih_literatur_i_folklora/Uchenyj_prosvetitel_pedagog_Makar_Evsevevich_Evsevev/ Финно-угорские библиотеки России. Макар Евсевьевич ЕВСЕВЬЕВ]{{ref-ru}}</ref>) Макар Евсевьевич'''  ([[1864]] [[якшамковонь 18 чи]], [[Цярмун (Ветькень Республика)|Цярмун]] - [[1931]] [[панжиковонь 10 чи]] [[Саранск]]) — васеньце<ref name="fulr" /> содавикс [[эрзят|эрзянь ломанень]] тонавтыця, наукань келень содый-теий докторось (1921). Эрзя.
 
 ==Эстедензэ==
-Макар Евсеевич чачсь [[1864]] иень [[якшамковонь 18 чи]]  (30) чистэ, [[Цярмун (Ветькень Республика)|Цярмун]] велесэ<ref name="Библиотека Мо" /> (рузокс Малые Кармалы),  неень Ибресинбуень [[Ветькень Республикась|Ветькень Масторс]]о сокиця-видицянь семиясо. Семиясост кемнилее эйкакшт. Тетязо, Евсевий Тихонович Кобаев - сокиця-видицяль. Авазо, Ирина Петровна, кудонь азорава, содась ламо морот, урнемат, ёвкст. Вишка Макарнэнь панжовсь тиринь келенть мазычизэ-валдозо, те ёжомарямось ванстови мейле эрямонзо перть.
+Макар Евсеевич чачсь [[1864]] иень [[якшамковонь 18 чи]]  (30) чистэ, [[Цярмун (Ветькень Республика)|Цярмун]] велесэ<ref name="Библиотека Мо" /> ([[рузонь кель|рузокс]] ''Малые Кармалы'', [[ветькень кель|чуважокс]] ''Ирçе Çармăс''),  неень Ибресинбуень [[Ветькень Республикась|Ветькень Масторс]]о сокиця-видицянь семиясо. Семиясост кемнилее эйкакшт. Тетязо, Евсевий Тихонович Кобаев - сокиця-видицяль. Авазо, Ирина Петровна, кудонь азорава, содась ламо морот, урнемат, ёвкст. Вишка Макарнэнь панжовсь тиринь келенть мазычизэ-валдозо, те ёжомарямось ванстови мейле эрямонзо перть.
 1872-це иестэ Макаронь максызь тонавтнеме Шераутонь ушодкс школас, Цярмунонть эйстэ сисем вайгельпеть. Тонавтнесь вадрясто. Вана кодамо питне марто прядызе цёрынесь те школанть. Чуважтнэнь коест коряс Макаронь фамилиянзо сёрмадызь тетянзо лемсэ. Истя Макар Кобаев теевсь Евсевьевекс.
 
 1876-це иестэ Шераутсо ушодкс училищань прядомадо мейле 14 иесэ цёрынесь ялго туи Казанев тонавтыцянь семинарияв. Тесэ вадрясто кирдинзе экзаментнэнь ды саизь тонавтнеме. Содамочис бажиця эрзянь цёрынесь тиринь кельдензэ башка кармась кортамо [[рузонь кель|рузокс]], [[печкасонь кель|татарокс]], [[ветькень кель|чуважокс]]. Содась лия кельтькак.
@@ -66,7 +66,7 @@
 
 1919–це иестэ саезь 1929–це иес сон важоди Татариянь центральной музейсэ. Теде башка ловны лекцият [[эрзянь кель]]денть, этнографиядо, историядо Казанень Чилисема ёнксонь-педагогиянь ды Коммунизмань университетсэ. Теке шкастонть сонзэ лезксэнзэ вельде панжовить: васенце мордовской учительской семинария – Мачкасс велесэ (Саратовонь губерния, [[1918]]), тонавтыцянь семинария – В. Толкан велесэ (Самарань губерния), Педагогикань курсат – [[Москов]]со, косо ютасть «переподготовка» эрзянь ды мокшонь тонавтыцятне. Курстнэнь прявтокс ды пурныцякс ульнесь Ф.Ф. Советкин.
 
-Комсеце пингень комсеце иетнестэ Макар Евсевьевич ульнесь профессорокс, анокстась тонавтыцят, кепедсь Рав чирень раськетнень содамочист, культураст. Сон ламо важодсь мокшонь ды эрзянь культурань-содамочинь вейсэндявксонь прявтокс. 1924-це иестэ Макар Евсевьевич ульнесь эрзянь ды мокшонь тонавтыцянь Весероссиянь васенце Промксонь делегатокс, косо ульнесь ветицякс. 
+Комсеце пингень комсеце иетнестэ Макар Евсевьевич ульнесь профессорокс, анокстась тонавтыцят, кепедсь Рав чирень раськетнень содамочист, культураст. Сон ламо важодсь мокшонь ды эрзянь культурань-содамочинь вейсэндявксонь прявтокс. 1924-це иестэ Макар Евсевьевич ульнесь эрзянь ды мокшонь тонавтыцянь Весероссиянь васенце Промксонь делегатокс, косо ульнесь ветицякс.
 
 == Шкинемазо == 
 * М.Е. Евсевьевень прявт важодеманзо лиссть печатсь революциядо мейле:
