*Empty MediaWiki Message*

--- a/Ёндол_(паз).mw
+++ b/Ёндол_(паз).mw
@@ -1,3 +1,4 @@
+{{Лия смустьтне|Ёндол (смустьтне)}}
 '''Ё́ндол''' — [[Пурьгинепаз|Пурьгинепазонь]] цёра, [[Ёндол (пертпельксэнь вал)|ёндолонь]] [[паз]].
 
 {{stub}}
