сёрмадома лувонь витнема-петнема

--- a/Степан_Эрьзя.mw
+++ b/Степан_Эрьзя.mw
@@ -4,8 +4,8 @@
  |чачома лем           = 
  |артовкс              = Erzia.jpg <!-- Брать только с commons или из ру-wiki, ссылки на другие сервера игнорируются -->
  |артовксонть покшолмазо   = 250
- |артовксонть эйсте    = Аргентинань артыцянь литографиясь <!-- Должно характеризовать портрет -->
- |важодема ёрокчизе    = чувтосто керсиця, Россиянь ды Раськеютконь артыця
+ |артовксонть эйстэ    = Аргентинань артыцянь литографиясь <!-- Должно характеризовать портрет -->
+ |важодема ёрокчизэ    = чувтосто керсиця, Россиянь ды Раськеютконь артыця
  |чачома чись          = 27.10.1876
  |чачома тарка         = {{ЧачомаТарка|Баеньбуе (Орданьбуе)}}
  |гражданчи            = {{Масторкоцт|СССР}}
@@ -22,24 +22,24 @@
  |вальма               = 
  |википурнавкс         = 
 }}
-'''Степан Эрьзя''' (Нефёдовонь Митреень Стёпук, [[Ожоковонь 27 чи|ожоковонь 27-це]] ([[Сундерьковонь 8 чи|суньдерьковонь 8-це]]) чисте [[1876 ие|1876 иестэ]] Баеньбуесэ - [[Сундерьковонь 24 чи|суньдерьковонь 24-це чистэ]] [[1959 ие]] Москов) — [[Эрзя|Эрзянь]] Инекерсиця, Россиянь ды Раськеютконь артыця, чувтосто керсиця. 
+'''Степан Эрьзя''' (Нефёдовонь Митреень Стёпук, [[Ожоковонь 27 чи|ожоковонь 27-це]] ([[Сундерьковонь 8 чи|сундерьковонь 8-це]]) чистэ [[1876 ие|1876 иестэ]] Баеньбуесэ - [[Сундерьковонь 24 чи|сундерьковонь 24-це чистэ]] [[1959 ие]] Москов) — [[Эрзя|Эрзянь]] Инекерсиця, Россиянь ды Раськеютконь артыця, чувтосто керсиця. 
  
-Эрзя раськень лементь путызеть эсинзе лемес вана мезень коряс — арсесь невтемензэ веси Мастороньте вишка раськеденть, конань улить Инеломанть.
+Эрзя раськень лементь путызе эсензэ лемс вана мезень кисэ — арсесь невтемензэ весе Масторонтень вишка раськеденть, конань улить Инеломанензэ.
 
 == Эрямопингезэ ==
-Чачсь [[Баеньбуе (Орданьбуе)|Баеньбуесэ]] [[Ратор буэ|Ратор буесэ]] Симбирской ёнксо [[Ожоковонь 27 чи|ожоковонь 27-це]] ([[Сундерьковонь 8 чи|суньдерьковонь 8-це]]) чисте [[1876 ие|1876 иестэ]] (кона ней ашти [[Орданьбуе|Орданьбуень]] [[Мордовия Республикась|Мордовия Республикасо]]) сокиця-видиця семиясо. Васенце артома тонавтнемат сайсь [[Ратор ош|Ратор]] ды [[Казань ош|Казанень]] оштнень пазавань теемакудотнесе.
+Чачсь [[Баеньбуе (Орданьбуе)|Баеньбуесэ]] [[Ратор буэ|Ратор буесэ]] Симбирской ёнкссо [[Ожоковонь 27 чи|ожоковонь 27-це]] ([[Сундерьковонь 8 чи|сундерьковонь 8-це]]) чистэ [[1876 ие|1876 иестэ]] (кона ней ашти [[Орданьбуе|Орданьбуень]] [[Мордовия Республикась|Мордовия Республикасо]]) сокиця-видиця семиясо. Васенце артома тонавтнемат сайсь [[Ратор ош|Ратор]] ды [[Казань ош|Казанень]] оштнень пазавань теемакудотнесэ.
 
-[[1902 ие]]стэ саезь 1906 иес тонавтнесь МУЖВЗ-со (Московонь живописень, ваяниянь ды зодчествань училищасо) Волнухинень С. М. ды Трубецкоень П. П. содавикс тонавтыцятнень кедьсе.
+[[1902 ие|1902 иестэ]] саезь 1906 иес тонавтнесь МУЖВЗ-со (Московонь живописень, ваяниянь ды зодчествань училищасо) Волнухинень С. М. ды Трубецкоень П. П. содавикс тонавтыцятнень кедьсэ.
 
-[[1906 ие]]сте саезь 1914 иес чувтосто керсицясь эрясь [[Италия Мастор|Италиянь]] ды [[Франция Мастор|Франциянь]] Мастортнева.
+[[1906 ие]]стэ саезь 1914 иес чувтосто керсицясь эрясь [[Италия Мастор|Италиянь]] ды [[Франция Мастор|Франциянь]] Мастортнева.
 [[File:Ryabiv AP and StErzia.jpg|thumb|left|350px|[[Рябовонь, Анатолий Павлович|Рябовонь Анатолий]] ды Степан Эрьзя, (1920-це иетнень ушодовмсто)]]
-[[1920 ие]]стэ саезь 1926 иес эрясь Кавказонь ёнксо ды лия [[СССР|СССР-нь]] лембе ёнкснева. 1926 иесте Степан Эрьзя ардсь Франциянь Масторов (Париж ошов) эсинзе невтевкс марто, сесте сонзе ушодовсь кувака омбомасторонь эрямо ды шкинема шказо. 
+[[1920 ие]]стэ саезь 1926 иес эрясь Кавказонь ёнкссо ды лия [[СССР|СССР-нь]] лембе ёнкстнева. 1926 иестэ Степан Эрьзя ардсь Франциянь Масторов (Париж ошов) эсензэ невтевкс марто, сестэ сонзэ ушодовсь кувака омбомасторонь эрямо ды шкинема шказо. 
 
 [[1927 ие]]стэ саезь 1950 иес Инекерсицясь важоди ды эри [[Аргентинань Мастор|Аргентинань Масторсо]] ([[Буэнос-Айрес ош|Буэнос-Айресес ошов]]). 
 
-[[1950 ие]]стэ Степан Эрьзянень максть велявтомо совамо одов Советень Масторов, ды 1951 иестэ сон сась [[Москов ош|Москов ошов]], ансяк тиринь, [[Эрзянь Мастор|Эрзянь Масторов]] сонзэ эзизь нолда. Мартонзо усксь пек ламо эсинзэ теевкст. 
+[[1950 ие]]стэ Степан Эрьзянень максть велявтомо совамо одов Советень Масторов, ды 1951 иестэ сон сась [[Москов ош|Москов ошов]], ансяк тиринь, [[Эрзянь Мастор|Эрзянь Масторов]] сонзэ эзизь нолда. Мартонзо усксь пек ламо эсензэ теевкст. 
 
-[[1957 ие]]стэ Эрьзя ульнесь Казезь Важодемань Якстере Раське коцтонь орденсэ-тешксэ.
+[[1957 ие]]стэ Эрьзя ульнесь Казезь Важодемань Якстере Раське коцтонь орденсэ-тешкссэ.
 
 Инекерсицясь Степан Эрьзя кулось [[Сундерьковонь 24 чи|суньдерьковонь 24-це чистэ]] [[1959 ие]]стэ Москов ошсо. Калмазь [[Саран ош|Саран ошсо]].
 
