--- a/Люксембург_Мастор.mw
+++ b/Люксембург_Мастор.mw
@@ -5,7 +5,7 @@
  |Эрзянь лем              = Люксембург Ине Герцогмастор
  |Оригинальное название   = {{lang-lb|Groussherzogtum Lëtzebuerg}}<br />{{lang-fr|Grand-Duché de Luxembourg}}<br />{{lang-de|Großherzogtum Luxemburg}}
  |Родительный падеж       = Люксембургонь
- |Герб                    = Greater_coat_of_arms_of_the_grand-duchy_of_Luxembourg.svg
+ |Герб                    = Great coat of arms of Luxembourg.svg
  |Вместо герба            = 
  |Коцт                    = Flag of Luxembourg.svg
  |Девиз                   = ''Mir wëlle bleiwe wat mir sinn''
