--- a/Паасонен,_Хейкки.mw
+++ b/Паасонен,_Хейкки.mw
@@ -24,9 +24,9 @@
 }}
 '''Паасонен Хейкки''' ({{lang-fi|Heikki Paasonen}}, [[1865]] [[якшамковонь 2 чи]] [[Миккели ош]] — [[1919]] [[умарьковонь 24 чи]] [[Хельсинки ош]]) — келень содый-теий, фольклорист, омбо масторонь кельс ютавтыця. 
 
-Чачсь [[Суоми Мастор|Суоми масторонь]] [[Миккели ош]]со 1865 иень [[якшамков]]онь омбоце чистэ. Университетэнь прядомадо мейле (1888) сыргась эрьзятнень-мокшотнень юткс фольклор материалонь пурнамо. Келев-валов материалтнэсэ пурнась 1889-1912 аволь ськамонзо, ульнесь лездыцянзояк.
+Чачсь [[Суоми Мастор|Суоми масторонь]] [[Миккели ош|Миккели ошсо]] 1865 иень [[якшамков]]онь омбоце чистэ. Университетэнь прядомадо мейле (1888) сыргась эрьзятнень-мокшотнень юткс фольклор материалонь пурнамо. Келев-валов материалтнэсэ пурнась 1889-1912 аволь ськамонзо, ульнесь лездыцянзояк.
 
-1889—1890 иетнестэ пурныль паксясо [[Эрзя|эрзятнеде]] ды [[мокшот]]неде материал. 1898—1902 иетнестэ эрзятнень ютксо, истяжо [[марить|маринь]], татаронь-мишарень, хантонь ютксо. Пурныль эрьва мезе [[Суоми-угрань раськеть|суоми-угрань раськетнеде]]: эрямодост, кельдест, оршамопельдест,  истяжо явтась мель [[Ветькень кель|ветькень келентень]]. [[Эрзянь кель|Эрзянь]] ды [[Мокшонь кель|мокшонь]] кельтнесэ мусь 20-те ламо кезэрень ветькень валт. Учёноенть меленть коряс, неть валтнэ совавсть эрзянь ды мокшонь кельтнес  [[XIII пинге|XIII пингеденть]] икеле. 
+1889—1890 иетнестэ пурнась велетнева [[Эрзя|эрзятнеде]] ды [[мокшот]]неде материал. 1898—1902 иетнестэ эрзятнень ютксо, истяжо [[марить|маринь]], татаронь-мишарень, хантонь ютксо. Пурныль эрьва мезе [[Суоми-угрань раськеть|суоми-угрань раськетнеде]]: эрямодост, кельдест, оршамопельдест,  истяжо явтась мель [[Ветькень кель|ветькень келентень]]. [[Эрзянь кель|Эрзянь]] ды [[Мокшонь кель|мокшонь]] кельтнесэ мусь 20-те ламо кезэрень ветькень валт. Учёноенть меленть коряс, неть валтнэ совавсть эрзянь ды мокшонь кельтнес  [[XIII пинге|XIII пингеденть]] икеле. 
 
 Кода келень ванкшныця ваннось эрьва-кодат малавиксэнь кевкстемат [[Суоми-угрань кельть|суоминь-угрань кельтнень]],  сулмавкст суоми-угрань ды тюрконь кельтнесэ, сынст вайгельксэнь касомаст. [[1908 ие]]стэ нолдась {{Коцт|Мадяронь Мастор|1867}}[[Мадяронь Мастор|Мадярсо]] [[Ветькень кель|ветьке]]-[[Мадьяронь кель|мадяро]]-немецень валкс, конатась турецень кельс ютавтозель ды нолдазь ульнесь Стамбул ошсо, 1974 иестэ одс нолдазь [[Мадьяронь Мастор|Мадярсо]]. 
 
